--- a/src/BusinessLogic/Resources/templates/default-parcel.html
+++ b/src/BusinessLogic/Resources/templates/default-parcel.html
@@ -6,7 +6,7 @@
         <h1 id="pl-page-title" class="pl-text-center pl-full-width">
         </h1>
     </header>
-    <form method="POST" id="pl-parcel-form" class="pl-small-page pl-page-padding">
+    <form method="POST" id="pl-parcel-form" class="pl-small-page pl-page-padding pl-page-content">
         <p class="pl-text-center pl-page-info pl-bottom-separate">
         </p>
         <div>
@@ -41,7 +41,7 @@
         </div>
     </form>
     <div class="pl-page-buttons">
-        <button id="pl-default-parcel-submit-btn" name="defaultParcelSubmit" class="pl-button pl-button-primary">
+        <button id="pl-page-submit-btn" class="pl-button pl-button-primary">
         </button>
     </div>
 </div>
