--- a/src/BusinessLogic/Resources/templates/onboarding-overview.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-overview.html
@@ -1,5 +1,5 @@
 <div class="pl-onboarding-overview-page pl-flex-expand pl-medium-page">
-    <div class="pl-text-center pl-page-padding">
+    <div class="pl-text-center pl-page-padding pl-page-content">
         <div class="pl-bottom-separate">
             <h1 class="pl-text-center">
                 {$onboardingOverview.header}
