--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -61,7 +61,7 @@
       align-items: center;
       width: 100%;
       padding: 5px 0;
-      color: #2095f2;
+      color: $color-blue;
       font-size: 15px;
       text-transform: uppercase;
       cursor: pointer;
