--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -134,10 +134,9 @@
     }
 
     select {
-      height: 50px;
       border: 1px solid $border-color;
       line-height: 50px;
-      padding: 7px 0 0 15px;
+      padding: 7px 0 0 11px;
       background-color: $color-white;
       color: $input-control-color;
       font-size: 12px;
@@ -155,8 +154,31 @@
     i {
       position: absolute;
       right: 10px;
-      top: 13px;
+      top: 18px;
       color: $border-color;
+    }
+
+    .pl-autocomplete-list {
+      background-color: $color-white;
+      border: 1px solid $border-color;
+      width: 100%;
+      margin-top: 57px;
+      position: absolute;
+      z-index: 1;
+      max-height: 200px;
+      overflow: auto;
+
+      .pl-autocomplete-list-item {
+        width: 100%;
+        padding: 5px;
+        font-size: 15px;
+        cursor: pointer;
+
+        &:hover, &.pl-focus {
+          background-color: $color-little-transparent;
+          color: $color-blue;
+        }
+      }
     }
   }
 
