--- a/src/BusinessLogic/Resources/scss/reset.scss
+++ b/src/BusinessLogic/Resources/scss/reset.scss
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   background-color: $color-white;
-  min-height: 100%;
+  flex-grow: 1;
   position: relative;
 
   template {
