--- a/src/BusinessLogic/Resources/scss/variables.scss
+++ b/src/BusinessLogic/Resources/scss/variables.scss
@@ -3,12 +3,14 @@ $input-control-color: #5d5d5d;
 $text-heading-color: #5E6972;
 
 $border-color: #d7d7d7;
+$border-light: #F5F5F5;
 
 $color-white: #ffffff;
 $color-blue: #2095f2;
 $color-blue-darker: rgba(32, 149, 242, .7);
 $color-navy-dark: #2E4265;
 $color-gray: #9B9B9B;
+$color-light-gray: #717C87;
 $color-light: #E1E1E1;
 $color-red: #e63f3f;
 
