Add system info file modal
Issue: PLCR1801-35

--- a/src/BusinessLogic/Resources/templates/configuration.html
+++ b/src/BusinessLogic/Resources/templates/configuration.html
@@ -46,7 +46,7 @@
         </div>
         <div class="pl-row-orientation">
             <span id="pl-version-number"></span>
-            &nbsp;<div class="pl-icon-text pl-clickable">{$configuration.systemInfo}</div>
+            &nbsp;<div id="pl-open-system-info" class="pl-icon-text pl-clickable">{$configuration.systemInfo}</div>
         </div>
     </div>
 </div>
