--- a/src/BusinessLogic/Resources/templates/configuration.html
+++ b/src/BusinessLogic/Resources/templates/configuration.html
@@ -1,4 +1,4 @@
-<div class="pl-configuration-page pl-flex-expand pl-full-width">
+<div class="pl-configuration-page pl-page-config">
     <div class="pl-flex-expand">
         <header class="pl-sub-header">
             <button id="pl-back-button" class="pl-icon-button">
