--- a/src/BusinessLogic/Resources/templates/default-parcel.html
+++ b/src/BusinessLogic/Resources/templates/default-parcel.html
@@ -1,4 +1,4 @@
-<div class="pl-default-parcel-page pl-flex-expand pl-full-width">
+<div class="pl-default-parcel-page">
     <header class="pl-sub-header">
         <button id="pl-back-button" class="pl-icon-button">
             <i class="material-icons">keyboard_backspace</i>
