--- a/src/BusinessLogic/Resources/templates/default-warehouse.html
+++ b/src/BusinessLogic/Resources/templates/default-warehouse.html
@@ -1,4 +1,4 @@
-<div class="pl-default-warehouse-page pl-flex-expand pl-full-width">
+<div class="pl-default-warehouse-page">
     <header class="pl-sub-header">
         <button id="pl-back-button" class="pl-icon-button">
             <i class="material-icons">keyboard_backspace</i>
@@ -34,7 +34,7 @@
                 <label for="pl-default-warehouse-company">{$defaultWarehouse.company}</label>
             </div>
             <div class="pl-form-group">
-                <select id="pl-default-warehouse-country" name="country" data-required="true">
+                <select id="pl-default-warehouse-country" name="country" data-required="true" class="pl-with-label">
                 </select>
                 <i class="material-icons">expand_more</i>
                 <label for="pl-default-warehouse-country">{$defaultWarehouse.country}</label>
