--- a/src/BusinessLogic/Resources/templates/register.html
+++ b/src/BusinessLogic/Resources/templates/register.html
@@ -32,7 +32,7 @@
                     {$register.getToKnowYou}
                 </p>
                 <div class="pl-form-group" id="pl-register-delivery-volume">
-                    <select class=form-control"
+                    <select class="pl-with-label"
                             name="estimated_delivery_volume"
                             id="pl-register-shipment-volume"
                             data-required="true">
