--- a/src/BusinessLogic/Resources/scss/utility.scss
+++ b/src/BusinessLogic/Resources/scss/utility.scss
@@ -7,6 +7,11 @@
     width: 100%;
   }
 
+  .pl-half-width {
+    display: inline-flex;
+    width: 50%;
+  }
+
   .pl-medium-page {
     max-width: 540px;
     margin-left: auto;
@@ -137,6 +142,14 @@
 
   .pl-clickable {
     cursor: pointer;
+  }
+
+  .pl-all-caps {
+    text-transform: uppercase;
+  }
+
+  .pl-block {
+    display: block;
   }
 }
 
