--- a/src/BusinessLogic/Resources/scss/utility.scss
+++ b/src/BusinessLogic/Resources/scss/utility.scss
@@ -74,11 +74,16 @@
     justify-content: flex-start;
   }
 
+  .pl-separate-content {
+    justify-content: space-between;
+  }
+
   .pl-no-margin {
     margin: 0;
   }
 
   .pl-center {
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -88,37 +93,20 @@
     align-items: flex-start;
   }
 
+  .pl-wrap-items {
+    flex-wrap: wrap;
+  }
+
   .pl-header-text-wrapper {
     line-height: 22px;
     font-size: 22px;
   }
 
-  .pl-icon-button {
-    border: none;
-    background: transparent;
-    padding: 0;
-    width: $icon-button-size;
-    height: $icon-button-size;
-    min-width: $icon-button-size;
+  .pl-small {
+    padding: 5px;
+    width: 100px;
+    min-width: 100px;
     margin: 0;
-
-    i {
-      font-size: 20px;
-      width: auto;
-      color: $color-blue;
-    }
-
-    &:focus {
-      outline: none;
-    }
-
-    &:hover {
-      cursor: pointer;
-
-      i {
-        color: $color-white;
-      }
-    }
   }
 
   .pl-no-wrap {
