--- a/src/BusinessLogic/Resources/scss/reset.scss
+++ b/src/BusinessLogic/Resources/scss/reset.scss
@@ -65,6 +65,10 @@
     }
   }
 
+  br {
+    margin-bottom: 10px;
+  }
+
   h1, h2, h3, h4, h5, h6 {
     color: $text-heading-color;
     font-weight: bold;
