--- a/src/BusinessLogic/Resources/templates/shipping-methods-header.html
+++ b/src/BusinessLogic/Resources/templates/shipping-methods-header.html
@@ -1,4 +1,4 @@
 <button class="pl-button pl-button-primary">Add new service</button>
-<div class="pl-row-orientation pl-center pl-configuration-menu pl-clickable">
+<div class="pl-row-orientation pl-configuration-menu pl-clickable">
     {$configuration.menu} <i class="material-icons pl-icon-text">settings</i>
 </div>
