--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -268,6 +268,23 @@
       padding-bottom: 32px;
     }
   }
+
+  #pl-price-percentage-increase, #pl-price-percentage-decrease {
+    height: 58px;
+    min-width: 110px;
+  }
+
+  .pl-form-group {
+    &:not(:first-child) {
+      &.pl-change-percent-wrapper {
+        margin-top: 0;
+      }
+    }
+  }
+
+  #pl-fixed-price {
+    width: 215px;
+  }
 }
 
 // mobile rules
