--- a/src/BusinessLogic/Resources/scss/variables.scss
+++ b/src/BusinessLogic/Resources/scss/variables.scss
@@ -1,6 +1,7 @@
 $text-color: #3a3d46;
 $input-control-color: #5d5d5d;
 $text-heading-color: #5E6972;
+$text-heading-light-color: #737373;
 
 $border-color: #d7d7d7;
 $border-light: #F5F5F5;
