--- a/src/BusinessLogic/Resources/templates/onboarding-overview.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-overview.html
@@ -8,7 +8,7 @@
         <div class="pl-onboarding-overview-list">
             <div class="pl-list-item">
                 <i class="material-icons">check</i>
-                <div class="pl-row-orientation pl-flex-expand">
+                <div class="pl-row-orientation pl-flex-expand pl-flex-left">
                     <div class="pl-flex-expand">
                         <div class="pl-onboarding-list-title">{$onboardingOverview.parcelDetails}</div>
                         <div class="pl-item-details pl-text-left"></div>
@@ -20,7 +20,7 @@
             </div>
             <div class="pl-list-item">
                 <i class="material-icons">check</i>
-                <div class="pl-row-orientation pl-flex-expand">
+                <div class="pl-row-orientation pl-flex-expand pl-flex-left">
                     <div class="pl-flex-expand">
                         <div class="pl-onboarding-list-title">{$onboardingOverview.senderAddress}</div>
                         <div class="pl-item-details pl-text-left"></div>
