--- a/src/BusinessLogic/Resources/templates/shipping-services-list.html
+++ b/src/BusinessLogic/Resources/templates/shipping-services-list.html
@@ -1,4 +1,4 @@
-<div class="pl-shipping-services-list">
+<div class="pl-shipping-services-list pl-page-content">
 
 </div>
 <template id="pl-shipping-services-list-item">
@@ -39,9 +39,9 @@
             </div>
         </div>
         <div class="pl-service-buttons" id="pl-service-actions">
-            <button class="pl-button pl-button-primary pl-small" id="pl-add-service">{$general.add}</button>
-            <button class="pl-button pl-button-primary pl-small" id="pl-edit-service">{$general.edit}</button>
-            <button class="pl-button pl-button-secondary pl-small" id="pl-delete-service">{$general.delete}</button>
+            <button class="pl-button pl-button-primary" id="pl-add-service">{$general.add}</button>
+            <button class="pl-button pl-button-secondary pl-no-border" id="pl-delete-service">{$general.delete}</button>
+            <button class="pl-button pl-button-primary" id="pl-edit-service">{$general.edit}</button>
         </div>
     </div>
 </template>
