--- a/src/BusinessLogic/Resources/templates/shipping-services-table.html
+++ b/src/BusinessLogic/Resources/templates/shipping-services-table.html
@@ -100,7 +100,9 @@
         <td class="pl-text-left" id="pl-service-actions">
             <button class="pl-button pl-button-primary pl-small" id="pl-add-service">{$general.add}</button>
             <button class="pl-button pl-button-primary pl-small" id="pl-edit-service">{$general.edit}</button>
-            <button class="pl-button pl-button-secondary pl-small" id="pl-delete-service">{$general.delete}</button>
+            <button class="pl-button pl-button-secondary pl-small pl-no-border" id="pl-delete-service">
+                {$general.delete}
+            </button>
         </td>
     </tr>
 </template>
