--- a/src/BusinessLogic/Resources/templates/shipping-services-header.html
+++ b/src/BusinessLogic/Resources/templates/shipping-services-header.html
@@ -1,4 +1,4 @@
-<button class="pl-button pl-button-primary">Add new service</button>
+<button class="pl-button pl-button-primary pl-add-service-button">{$shippingServices.addNewService}</button>
 <div class="pl-row-orientation pl-configuration-menu pl-clickable">
     {$configuration.menu} <i class="material-icons pl-icon-text">settings</i>
 </div>
