Add pricing policy overlay
Issue: PLCR1801-51

--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -285,6 +285,12 @@
   #pl-fixed-price {
     width: 215px;
   }
+
+  .pl-button-inverted {
+    &.pl-button-clear {
+      color: $color-blue;
+    }
+  }
 }
 
 // mobile rules
