--- a/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
+++ b/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
@@ -1,8 +1,8 @@
 <div class="pl-center pl-full-width">
     <form id="pl-pricing-policy-form">
         <section>
-            <div class="pl-section-title pl-text-left">
-                {$shippingServices.singlePricePolicy}
+            <div class="pl-section-title pl-text-left" id="pl-pricing-policy-title">
+
             </div>
             <div class="pl-top-separate pl-text-left">
                 1- {$shippingServices.rangeTypeExplanation}
