Add pricing policy overlay (FE)
Issue:PLCR1801-51

--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -327,6 +327,11 @@
       display: none;
     }
   }
+
+  .pl-saved-pricing-policies-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 // mobile rules
