--- a/src/BusinessLogic/Resources/scss/utility.scss
+++ b/src/BusinessLogic/Resources/scss/utility.scss
@@ -45,6 +45,10 @@
     margin-bottom: 26px;
   }
 
+  .pl-separate-top-small {
+    margin-top: 2px;
+  }
+
   .pl-separate-horizontally {
     margin-left: 26px;
     margin-right: 26px;
