Add popup for disabling shop services
Issue: PLCR1801-46

--- a/src/BusinessLogic/Resources/scss/utility.scss
+++ b/src/BusinessLogic/Resources/scss/utility.scss
@@ -24,6 +24,10 @@
     margin-right: auto;
   }
 
+  .pl-small-width {
+    max-width: 410px;
+  }
+
   .pl-hidden {
     display: none !important;
   }
