--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -511,12 +511,13 @@
     width: 3px;
     cursor: col-resize;
     position: absolute;
-    right: 0;
+    right: -11px;
     top: 50%;
     transform: translateY(-50%) rotate(90deg);
     font-size: 20px !important;
     transform-origin: top;
     color: $color-gray;
+    z-index: 1;
   }
 
   .pl-error {
