Add auto-configure handling
Issue: PLCR1801-48

--- a/src/BusinessLogic/Resources/templates/pick-shipping-services.html
+++ b/src/BusinessLogic/Resources/templates/pick-shipping-services.html
@@ -11,7 +11,7 @@
                 </button>
             </div>
         </header>
-        <div class="pl-flex-left">
+        <div class="pl-flex-left" id="pl-shipping-services-wrapper">
             <div class="pl-services-filter-wrapper">
                 <div class="pl-filter">
                     <div class="pl-filter-title">
